--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ android {
     ndkVersion "27.0.12077973"
     namespace "com.bps.mboistats"
     compileSdkVersion 35
-    ndkVersion flutter.ndkVersion
+    // ndkVersion flutter.ndkVersion
 
     signingConfigs {
         release {
